--- a/gb/23/2/6/n13923638.md
+++ b/gb/23/2/6/n13923638.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>毛绒土拨鼠预测：卑诗省将迎来早春</h2>
 <h6></h6>
 <hr>
-<p>【大纪元2023年02月06日讯】<span style="font-weight: 400;">?（大纪元记者</span><span style="font-weight: 400;">欣羽</span><span style="font-weight: 400;">加拿大温哥华编译报导）</span><span style="font-weight: 400;">如果<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%9F%E6%8B%A8%E9%BC%A0%E6%97%A5.md#1">土拨鼠日</a>的预测准确，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%91%E8%AF%97%E7%9C%81.md#1">卑诗省</a>今年将迎来早春。2月2日 是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7%E4%BC%A0%E7%BB%9F.md#1">加拿大传统</a>的土拨鼠日。艾伦·布鲁克斯自然中心(Allan Brooks Nature Centre)的毛绒玩偶——黄腹土拨鼠奥基(????Okie)，给聚集在弗农(Vernon)参加这一传统节日的人群带来了活力。</span></p>
+<p>【大纪元2023年02月06日讯】<span style="font-weight: 400;">?（大纪元记者</span><span style="font-weight: 400;">欣羽</span><span style="font-weight: 400;">加拿大温哥华编译报导）</span><span style="font-weight: 400;">如果土拨鼠日的预测准确，卑诗省今年将迎来早春。2月2日 是加拿大传统的土拨鼠日。艾伦·布鲁克斯自然中心(Allan Brooks Nature Centre)的毛绒玩偶——黄腹土拨鼠奥基(????Okie)，给聚集在弗农(Vernon)参加这一传统节日的人群带来了活力。</span></p>
 <p><span style="font-weight: 400;">据Global News报导，今年黄腹土拨鼠影子没有出现，意味着这个冬天将会很短。自然中心的经理谢丽尔．胡德（Cheryl Hood）说，大家听到这个好消息都很兴奋，期待着草地再次变绿。</span></p>
 <p><span style="font-weight: 400;">胡德指出，这是奥基第二次被召唤去执行任务。到目前为止，它的预测并不理想。去年，他被扶起来测量自己的影子，结果却大错特错。</span></p>
 <p><span style="font-weight: 400;">但胡德说，正确与否并不是重点，奥基的存在是为了聚集社区居民一起思考自然世界。</span></p>
 <p><span style="font-weight: 400;">她说，她们用了毛绒土拨鼠玩偶，因为她们不忍心把一只野生动物关起来做30秒的预测，她们想要一些有趣的东西。?</span></p>
 <p><span style="font-weight: 400;">胡德说，在多云的日子里，比如今天，影子不太可能出现，春天应该会更早到来。这一传统起源于维京人（Vikings????），然后被基督徒所继承。当他们来到北美时，他们不再像在国内那样使用獾，而是转向土拨鼠。</span></p>
-<p><span style="font-weight: 400;">然而，对艾伦·布鲁克斯自然中心来说，最重要的是这些小生物的生活，它们与人类共享<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%A5%E8%82%AF%E9%82%A3%E6%A0%B9.md#1">奥肯那根</a>（Okanagan）这片土地，分享他们共同的历史。</span></p>
+<p><span style="font-weight: 400;">然而，对艾伦·布鲁克斯自然中心来说，最重要的是这些小生物的生活，它们与人类共享奥肯那根（Okanagan）这片土地，分享他们共同的历史。</span></p>
 <p><span style="font-weight: 400;">胡德说，土拨鼠是真正的冬眠动物，熊是半冬眠的，冬天会起来四处游荡，而土拨鼠是真正的冬眠，它们的新陈代谢减慢，一觉睡6到8个月。</span></p>
 <h2><strong>加拿大各省土拨鼠预测结果不同</strong></h2>
-<p><span style="font-weight: 400;">与此同时，在加拿大的其他地区，今年的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%9F%E6%8B%A8%E9%BC%A0%E6%97%A5.md#1">土拨鼠日</a>并没有按照剧本进行: 一只土拨鼠在做出预测之前就死了，而另一些土拨鼠则对今年春天是否会提早到来存在分歧。</span></p>
+<p><span style="font-weight: 400;">与此同时，在加拿大的其他地区，今年的土拨鼠日并没有按照剧本进行: 一只土拨鼠在做出预测之前就死了，而另一些土拨鼠则对今年春天是否会提早到来存在分歧。</span></p>
 <p><span style="font-weight: 400;">魁北克的土拨鼠弗雷德?拉</span><span style="font-weight: 400;">?</span><span style="font-weight: 400;">马莫特（??Fred la Marmotte）周四还没来得及公布它的预测就去世了，取而代之的是义工小土拨鼠。</span></p>
 <p><span style="font-weight: 400;">安大略省的土拨鼠威利(Wiarton Willie)和阿尔伯塔省的土拨鼠巴尔扎克?比利(Balzac Billy)都在周四早上预测早春将会来临。</span></p>
 <p><span style="font-weight: 400;">在新斯科舍省哈利法克斯北部的一个野生动物园里，当土拨鼠Shubenacadie Sam从一个被雪覆盖的围栏里出来时，看到了她的影子。</span></p>
@@ -21,41 +21,39 @@
 <p><span style="font-weight: 400;">在新斯科舍省当地时间早上8点，龙虾露西（</span><span style="font-weight: 400;">Lucy）</span><span style="font-weight: 400;">在塞布尔角岛（Cape Sable Island）堤道爬出海洋，看到了自己的影子。</span>◇</p>
 <p><span style="font-weight: 400;">责任编辑：李盈</span></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/3/n13552745.md#1">卑诗土拨鼠睡不醒  无法预测今冬结束日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13921050.md#1">春天何时到？美国土拨鼠菲尔做出预测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172092.md#1">向“自由”贺岁　七部亚洲电影将在温哥华上映</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172083.md#1">加拿大尚未降息 房主续签房贷如何选择</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172073.md#1">大温地区是否有真正可负担出租屋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172068.md#1">温哥华市长市情咨文演讲展望未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172064.md#1">遇暖冬和强降雨  大温三大滑雪场暂关闭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14172049.md#1">卑诗老年人贫困与住房危机加剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171838.md#1">工会接受调解 大温哥华公交本周末不停摆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171593.md#1">梁慕娴谈新书：写作是揭露真相的最佳途径</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/3/n13552745.md#1">卑诗土拨鼠睡不醒  无法预测今冬结束日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/2/n13921050.md#1">春天何时到？美国土拨鼠菲尔做出预测</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687534.md#1">加中签协议 台经办处长：加拿大安全应摆首位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687530.md#1">卑诗医生文书工作若减半  等同增1400名医生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687527.md#1">10万元银行本票遗失 道明银行处理程序受质疑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687525.md#1">环境部发布警报  大温和温哥华岛将迎强风豪雨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687501.md#1">Rennie预测：大温房市2026成交或止跌  难回高峰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687497.md#1">温哥华2受害者陷加密币骗局  损失130万元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/27/n14685204.md#1">列治文举行社区对话  聚焦“成瘾预防”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/25/n14683803.md#1">温岛庞氏骗局案核查  会计师费达1,200万元</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/4/n10689028.md#1" target="_blank">顾雪雍：89岁老人说往事 一字一泪斥残暴</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/28/n11285941.md#1" target="_blank">美议员颁发国会特别褒奖 感谢法轮大法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/28/n9085516.md#1" target="_blank">一位英国亚裔女士的生命礼物</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149352.md#1">【历史的瞬间】看是一幅画 听像一首歌——邓丽君</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161678.md#1">【古道人生】不知情之下娶了麻疯女 他怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167203.md#1">药学博士：自幼伴随我的鼻敏感和哮喘消失了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/29/n14169157.md#1">拥抱自信 走向阳光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/3/n14150007.md#1">受天帝责罚化身为燕 结缘修道人家的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171586.md#1">【晓天访谈】“打倒共产党” 柴松如何逃离中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170736.md#1">【菁英论坛】边境铁丝网拆建 德州和联邦打乒乓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171597.md#1">【菁英论坛】官员上下互骗无底线 国本动摇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170455.md#1">中共政治局会议未提三中全会 中南海陷内乱？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170180.md#1">中国股市跌至五年低点 中共“救市”止不住</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170544.md#1">【新闻大家谈】又现彭立发 天津车贴标语满街跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170432.md#1">TWICE Momo捐款助灾区 出国举手幅逗乐粉丝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170731.md#1">唐嫣自曝婚前6次被分手 罗晋喊5个字即和好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14170017.md#1">杨幂首次回应3亿对赌传闻 多个话题登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/30/n14169962.md#1">王家卫《繁花》剧集插曲疑侵权 歌手赵传发声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170686.md#1">时隔逾30年 杨紫琼首曝情断前夫主因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14166802.md#1">烧焦的锅不要扔 用小苏打清理焕然一新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">SONGMICS 6层大容量珠宝盒 带镜子（限时优惠）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165139.md#1">睡前简单6招拉筋操 助眠防抽筋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/31/n14170369.md#1">飞机落地时不应该鼓掌？ 旅游专家教你礼仪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14171087.md#1">“浩克”谈昔日生活：住月租200美元小房间</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/6/n13923638.htm">毛绒土拨鼠预测：卑诗省将迎来早春</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923638.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/6/n13923638.htm">毛绒土拨鼠预测：卑诗省将迎来早春</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/6/n13923638.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
